# Accounting_app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: PRD.md  class-diagram.mermaid  sequence-diagram.mermaid  vila微信支付账单流水文件(20260601-20260630).xlsx  vila支付宝交易明细(20260601-20260630).csv  交接文档.md  使用步骤.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: deepseek_provider.rs  mod.rs  prompts.rs  provider.rs
src-tauri/src/commands/: account_owner_commands.rs  ai_commands.rs  classification_commands.rs  cleaning_commands.rs  import_commands.rs  mod.rs  report_commands.rs  rule_commands.rs  settings_commands.rs  summary_commands.rs  transaction_commands.rs
src-tauri/src/dao/: account_owner_dao.rs  import_dao.rs  manual_data_dao.rs  mapping_dao.rs  mod.rs  rule_dao.rs  settings_dao.rs  tag_dao.rs  transaction_dao.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/db/dao/: mod.rs
src-tauri/src/models/: account_owner.rs  ai_learning_rule.rs  ai_report.rs  category_rule.rs  category_tag.rs  import_record.rs  mod.rs  monthly_manual_data.rs  summary_mapping.rs  transaction.rs
src-tauri/src/parsers/: alipay_parser.rs  mod.rs  wechat_parser.rs
src-tauri/src/services/: ai_service.rs  classification_engine.rs  cleaning_service.rs  import_service.rs  mod.rs  report_service.rs  summary_service.rs
(+38 files in other folders)
