[package]
name = "family-accounting-app"
version = "0.1.0"
description = "家庭记账桌面应用"
authors = ["family-accounting"]
edition = "2021"

[lib]
name = "family_accounting_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = "0.25"
encoding_rs = "0.8"
csv = "1.3"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
regex = "1"
async-trait = "0.1"
base64 = "0.22"
